k_means/lastrun.log
  File "/Users/sameenislam/Documents/Repositories/k-means-stackoverflow/k_means/rddparser.py", line 42
    repNoPosts = joinRdd.map(lambda (k,v): v)
                                    ^
SyntaxError: invalid syntax
